--- a/style/main.css
+++ b/style/main.css
@@ -70,11 +70,11 @@ hr {
 .test table,
 th,
 td {
+    margin: auto;
     font-family: 'Rock Salt', cursive;
     padding: 20px 15px;
     caption-side: bottom;
     color: #666;
-    text-align: right;
     border-collapse: collapse;
     width: 100%;
     border: 2px solid black;
@@ -82,6 +82,7 @@ td {
 }
 
 .test thead {
+    text-align: center;
     font-style: oblique;
 }
 
