--- a/views/TestSite.hbs
+++ b/views/TestSite.hbs
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Haano</title>
-    <link rel="stylesheet" href="style/main.css">
+    <link rel="stylesheet" href="../style/main.css">
 </head>
 
 <body>
@@ -22,8 +22,13 @@
 
         <h2>Немного 3D моделирования:</h2>
         <p>
-            <a tag="3d" href="Main.html" target="_blank" class="btn">3D модель в браузере! </a>
+            <a tag="3d" href="/3DModels.html" target="_blank" class="btn">3D модель в браузере! </a>
         </p>
+
+        <h2>Работа с БД</h2>
+        <a href="main.hbs" target="_blank" class="btn">БД</a>
+        </p>
+
     </div>
 
 
