--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,1 +1,24 @@
-<h2>Index page</h2>
+<h2>Todo page</h2>
+
+{{#if todos.length}}
+<ul>
+{{#each todos}}
+<class="todo">
+    <label>
+        {{#if completed}}
+        <input type="checkbox" checked>
+        <span class="completed">{{title}}</span>
+        {{else}}
+        <input type="checkbox">
+        <span >{{title}}</span>
+        {{/if}}
+
+        <button class="btn btn-small">Save</button>
+    </label>
+</li>
+{{/each}}
+</ul>
+
+{{else}}
+<p>No todos!</p>
+{{/if}}
