--- a/views/partials/navbar.hbs
+++ b/views/partials/navbar.hbs
@@ -3,9 +3,21 @@
     <div class="nav-wrapper">
       <a href="/" class="brand-logo">Классрук</a>
       <ul id="nav-mobile" class="right hide-on-med-and-down">
-        
+        {{#if isIndex}}
+        <li class="active"><a href="/">Главная</a></li>
+        {{else}}
         <li><a href="/">Главная</a></li>
+        {{/if}}
+
+
+        {{#if isCreate}}
+       <li class="active"><a href="/create">Create</a></li> 
+        {{else}}
         <li><a href="/create">Create</a></li>
+        {{/if}}
+        
+        
+        <li><a href="/TestSite">Create</a></li>
         
       </ul>
     </div>
